feat: implement createProduct lambda
